--- a/mvf/MVF1-Account_management.html
+++ b/mvf/MVF1-Account_management.html
@@ -39,14 +39,28 @@
           <b><img src="/images/mvf1class-account.bmp" width="960" height="600" alt="Class Diagram" />
         </p>
         <p>
-          <h3>Design Diagram</h3>
+          <h3>Design Diagram For Login</h3>
+          <p>User can easily change to the register page in the login page. </p>
           <b><img src="/images/mvf1login.bmp" width="960" height="600" alt="Class Diagram" />
+        </p>
+        <p>
+          <h3>Design Diagram For Sign Up</h3>
+          <p>After creating an account, users can login, logout, manage the profile. Furthermore, they can post and edit
+            the recipes or comment other recipes.</p>
+          <b><img src="/images/mvf1createaccount.bmp" width="960" height="600" alt="Class Diagram" />
+        </p>
+        <p>
+          <h3>Design Diagram For Profile Page</h3>
+          <p>We provide a profile card and users can modify their personal information </p>
+          <b><img src="/images/mvf1profile.bmp" width="960" height="900" alt="Class Diagram" />
         </p>
         <p>
 
           <h2>2.Explanation</h2>
           <h3>2.1 Description</h3>
-          <p style="color: black;">After creating an acount, users are able to login, logout and manage the profile. </p>
+          <p style="color: black;">In this feature, users can have their account to access more functions, such as
+            posting recipes, managing recipes and writing a comment for a recipe. In addition, only registered users can
+            save and collect their favorite recipes. </p>
           <h3>2.2 User story and criteria</h3>
 
 
