--- a/mvf/MVF2-Slider.html
+++ b/mvf/MVF2-Slider.html
@@ -8,9 +8,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
@@ -31,20 +31,19 @@
       <!-- STUB: done -->
       <p>
 
-      <p><b>Mock up (By invision): <br></b>
-        <p>User can select a slider picture and navigate to the recipe page directly</p>
-        <b><img src="/images/slider.gif" width="960" height="600" alt="" /></p>
+        <p><b>Mock up (By invision): <br></b>
+          <p>User can select a slider picture and navigate to the recipe page directly</p>
+          <b><img src="/images/slider.gif" width="960" height="600" alt="" />
+        </p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;"> 
-        The slider is showed in homepage which has four pages, and they are the best four liked 
+      <p style="color: black;">
+        The slider is shown on the homepage which has four pages, and they are the best four liked recipes of the
+        website. The slider can switch the pages automatically and users can also switch pages by clicking the button
+        under the slices. Furthermore, the user can
 
-        recipes of the website. The slider is able to switch the pages automatically and users can also 
-
-          switch pages by clicking the button under the slices. Furthermore, user can 
-
-           access the recipe detail page directly by simply clicking the picture. 
+        access the recipe detail page directly by simply clicking the picture.
 
 
       </p>
