--- a/mvf/MVF4-Recipe_information.html
+++ b/mvf/MVF4-Recipe_information.html
@@ -31,7 +31,8 @@
       <!-- STUB: done -->
       <p>
 
-        <p><b>Design diagram: <br></b>
+        <p><b>Design diagram For recipe thumbnails: <br></b>
+          <p>User can quickly select recipes from recipe thumbnails and register user can directly like or save the recipes</p>
           <b><img src="/images/mvf4.bmp" width="960" height="600" alt="" /></p>
       </p>
       <p>
@@ -41,9 +42,9 @@
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;">This feature allows users to select what recipe they need in a rapid way. We provide a
-        small recipe card with the title, author and its tags. Registered users also can directly like the recipe
-        through “like” button and save the recipe through save button. </p>
+      <p style="color: black;">This feature allows users to select what recipe they need rapidly. We provide a small
+        recipe card with the title, author and its tags. Registered users also can directly like the recipe through
+        “like” button and save the recipe through a save button. </p>
       <h3>2.2 User story and criteria</h3>
 
       <ul>
