--- a/mvf/MVF5-Step-by-step_instructions.html
+++ b/mvf/MVF5-Step-by-step_instructions.html
@@ -37,12 +37,19 @@
           <b><img src="/images/mvf5class.bmp" width="760" height="600" alt="" />
         </p>
         <p><b>Mock up diagram: <br></b>
+          <p>Each recipe will have detailed descriptions of ingredients and cooking methods. Besides, step-by-step
+            instructions with pictures will be applied to help the user to cook. </p>
           <b><img src="/images/mvf5gif.gif" width="960" height="300" alt="" />
         </p>
         <h2>2.Explanation</h2>
         <h3>2.1 Description</h3>
-        <p> Each recipe page will have detailed information about ingredients and step-by-step instructions with
-          pictures which will help user to cook. </p>
+        <p> Step-by-step instructions page should contain three parts which are recipe information, ingredients and
+          instructions. For the first part, this section will show the user the recipe photo and its author. All the
+          related tags will be shown as well. If users want to see more of similar recipes, they can click on the tag.
+          The website will look through the database again and show the recipes containing this tag. The second part is
+          ingredients, all the specific names and amounts will be shown. Besides, this part is designed to be a checkbox
+          which users could check if they have those ingredients. For the last part is instructions, detailed steps will
+          be offered with pictures. Users could use those for references. </p>
         <h3>2.2 User story and criteria</h3>
 
         <ul>
