--- a/mvf/MVF6-Tags_and_searching.html
+++ b/mvf/MVF6-Tags_and_searching.html
@@ -46,6 +46,7 @@
       <p>
 
         <p><b>Mock up diagram: <br></b>
+          <p>User can touch recommended tags or type in a recipe’s name or an ingredient’s name to search recipe </p>
           <b><img src="/images/mvf6gif.gif" width="960" height="300" alt="" />
         </p>
 
@@ -53,9 +54,11 @@
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
       <p style="color: black;">
-        To help users find their suitable recipes, tags will be used in recipes. Those tags may
-        contain key ingredients. Users will have a more pleasing searching experience because tags help them to target
-        recipes more precisely.
+        To help users find their suitable recipes, tags will be used in recipes. Those tags may contain key ingredients.
+        Users will have a more pleasing searching experience because tags help them to target recipes more precisely.
+        Tags are also structured in the system. The system provides different kinds of tags to help the user to find
+        what they want rapidly. In the result page, the user can directly save recipes through the save button
+        and see more about the recipe.
       </p>
       <h3>2.2 User story and criteria</h3>
 
