--- a/mvf/MVF7-Upload_and_manage_posts.html
+++ b/mvf/MVF7-Upload_and_manage_posts.html
@@ -49,18 +49,22 @@
           <b><img src="/images/mvf7diagram.jpg" width="960" /></p>
 
         <p><b>Mock up diagram: <br></b>
-          <b><img src="/images/mvf7gif.gif" width="960" height="300"/></p>
+          <p>We provide excellent UX and let user can upload their recipe. User can add title, upload cover picture, add
+            a description, add ingredients, add steps with a picture to describe the recipe in detail. We also provide
+            an option to allow the user to save as a draft. </p>
+          <b><img src="/images/mvf7gif.gif" width="960" height="300" />
+        </p>
 
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
       <p style="color: black;">
         <ul>
-          <li>Users can post and share the recipes. When posting the recipes, it is required to provide the title, 
-            ingredients, steps and pictures for the steps. Users can add tags for the recipes to make sure that 
-            recipes can be searched easily by the tags. For example, if the key Ingredient of a recipe is the egg, 
+          <li>Users can post and share the recipes. When posting the recipes, it is required to provide the title,
+            ingredients, steps and pictures for the steps. Users can add tags for the recipes to make sure that
+            recipes can be searched easily by the tags. For example, if the key Ingredient of a recipe is the egg,
             then egg can be one of the tags. Furthermore, if the user believes that salt flavor is special for
-             the recipe, he or she can also add 'salt' in the tags area. Mange recipes is the feature that users can 
+            the recipe, he or she can also add 'salt' in the tags area. Mange recipes is the feature that users can
             edit or delete the recipe if they wish.</li>
         </ul>
       </p>
