--- a/plan/estimate.html
+++ b/plan/estimate.html
@@ -22,144 +22,52 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-      <!--  <h1>&quot;When&quot; section</h1> -->
+        <!--  <h1>&quot;When&quot; section</h1> -->
       </header>
 
       <H2>Estimate plan table link: </H2>
-      <table data-toggle="table">
-        <thead>
-          <tr>
-            <th>person</th>
-            <th>Link</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Total</td>
-            <td>
-              <a
-                href=""
-              >
-                LINK</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>Zhihao Liang</td>
-            <td>
-              <a
-                href=""
-              >
-                LINK</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>Heran Wang</td>
-            <td>
-              <a
-                href=""
-              >
-                LINK</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>Mingxuan Zhou</td>
-            <td>
-              <a
-                href=""
-              >
-                LINK</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>Yi Yang</td>
-            <td>
-              <a
-                href=""
-              >
-                LINK</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>Yingjian Di</td>
-            <td>
-              <a
-                href=""
-              >
-                LINK</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>Gia Hung Le</td>
-            <td>
-              <a
-                href=""
-              >
-                LINK</a
-              >
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <a
+      href="https://rmiteduau.sharepoint.com/:x:/s/TR-WE-430-Ditto/EU6asvOvZu1CuW1D6fDJxrMBzrUypvILP8tb8X_sJtRhoA?e=knfXhH">
+     Excel: LINK</a>
 
-      <p><H3>Estimate plan Screenshots: <br></H3>
-        <b>Branch invision: <br></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        
-        <b>Branch p2: <br></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-        <b><img src="/images/" width="1035" alt="" /></b>
-      </p>
-<!--
-      <table data-toggle="table">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Planned Start</th>
-            <th>Planned Due</th>
-            <th>Lead by</th>
-            <th>Links</th>
-          </tr>
-        </thead>
-        <tbody>
-         
-        </tbody>
-      </table>
-    -->
+
+      <p>
+        <H3>Estimate plan Screenshots: <br></H3>
+        <p><b>Total<br></b>
+
+          <b><img src="/images/estotal.bmp" width="960" height="350" />
+        </p>
+        <p><b>Zhihao Liang<br></b>
+
+          <b><img src="/images/estzhi.bmp" width="960" height="900" />
+        </p>
+        <p><b>Gia Hung Le<br></b>
+
+          <b><img src="/images/estgia.bmp" width="960" height="900" />
+        </p>
+        <p><b>Yingjian Di<br></b>
+
+          <b><img src="/images/estyingjian.bmp" width="960" height="900" />
+        </p>
+        <p><b>Yi Yang<br></b>
+
+          <b><img src="/images/estyi.bmp" width="960" height="900" />
+        </p>
+        <p><b>Mingxuan Zhou<br></b>
+
+          <b><img src="/images/estmingxuan.bmp" width="960" height="900" />
+        </p>
+        <p><b>Heran Wang<br></b>
+
+          <b><img src="/images/estheran.bmp" width="960" height="900" />
+        </p>
+
     </div>
   </section>
   <!-- Footer -->
   <div id="footerDiv"></div>
   <!-- Scripts -->
-  <script src="/assets/js/jquery.min.js"></script>
-  <script src="/assets/js/skel.min.js"></script>
-  <script src="/assets/js/util.js"></script>
-  <script src="/assets/js/main.js"></script>
-  <script src="/assets/js/loader.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
+  <script src="/assets/js/common.js"></script>
 </body>
 
 </html>
