--- a/plan/how.html
+++ b/plan/how.html
@@ -24,7 +24,7 @@
     <div class="inner">
       <header class="major special">
         <h1>Technologies we are using</h1>
-        <p>We will describe how to finish our plan</p>
+
       </header>
 
       <h2>1. Resources and Tools</h2>
@@ -103,6 +103,35 @@
             <a href="http://www.sqlite.org/">(link)</a> And HTML, CSS
           </p>
         </li>
+
+        <li>
+          <img src="/images/invision-logo.jpg" width="600" height="248" alt="" />
+          <p>
+            <b>Description:</b> The digital product design platform powering the world’s best user experiences<a
+              href="https://www.invisionapp.com/">(link)</a>
+            <br />
+            <b>Why we use:</b> popular, easy to use <br />
+            <b>Version: </b> 1.28.0 <br />
+            <b>Price:</b> free <br />
+            <b>Alternatives:</b> Figma
+            <a href="https://www.figma.com/">(link)</a>, Adobe XD
+            <a href="https://www.adobe.com/hk_en/products/xd.html">(link)</a>
+          </p>
+        </li>
+        <li>
+          <img src="/images/lucidchart-logo.png" width="367" height="248" alt="" />
+          <p>
+            <b>Description:</b> Lucidchart is a web-based proprietary platform that allows users to collaborate on
+            drawing, revising and sharing charts and diagrams.<a href="https://www.lucidchart.com//">(link)</a>
+            <br />
+            <b>Why we use:</b> popular, can collaborate  <br />
+            <b>Version: </b> web application <br />
+            <b>Price:</b> free <br />
+            <b>Alternatives:</b> visual paradigm
+            <a href="https://www.visual-paradigm.com/">(link)</a>
+          </p>
+        </li>
+
       </ul>
       <h2>2. Collaborative Workspaces</h2>
       <p>
