--- a/evf/EVF5-Shopping helper.html
+++ b/evf/EVF5-Shopping helper.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  <title>EVF4-Substitution</title>
+  <title>EVF5-Shopping helper</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -24,7 +24,7 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-        <h1>MVF2 - Slider</h1>
+        <h1>EVF5-Shopping helper</h1>
       </header>
 
       <h2>1. Diagram design</h2>
@@ -32,17 +32,18 @@
       <p>
 
         <p><b>Mock up (By invision): <br></b>
-          <p>User can substitution ingredients in recipe</p>
-          <b><img src="/images/EVF4.png" width="960" height="600" alt="" />
+          <p>User can use shopping helper to help them get ingredients</p>
+          <b><img src="/images/EVF5.png" width="960" height="600" alt="" />
         </p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
       <p style="color: black;">
-        The function of this part is to help users replace the ingredients in the recipe. 
-        Because some users may be allergic to certain ingredients or other special circumstances, they can't use certain ingredients. 
-        Therefore, this function can help them replace inedible ingredients. This function can screen out the replaced menu for users to use.
-
+        This part of the function helps users to make up for the ingredients they lack while viewing the menu, and 
+        provides online order delivery service. If users don't need to spend freight, they can also find the nearest 
+        market to buy their ingredients through the map function, and the list of ingredients can also be saved to 
+        the collection album to facilitate the user's investigation.This feature is designed to provide a shopping
+         helper for users.
       </p>
       <h3>2.2 User story and criteria</h3>
 
@@ -62,19 +63,20 @@
               <tr>
                 <td>
                   <b>As a</b> user
-                  <p><b>I want</b> to substitution some ingredients in a recipe</p>
-                  <p><b>so that</b> I can avoid eating some ingredients</p>
+                  <p><b>I want</b> to use a shopping helper</p>
+                  <p><b>so that</b> I can buy ingredients easier</p>
                 </td>
                 <td>
                   <p>
                     <br><br>Criterion 0: <br>
-                    <b>Given</b>
+                    <b>Given</b> 
                     I am a customer
                     I search a recipe
                     I am on recipe detail page<br>
-                    <b><br>When</b> I click on the substitution button<br>
-                    <b><br>Then</b> User can substitution some ingredients And get new recipes<br>
-
+                    <b><br>When</b> I click on the shopping helper button<br>
+                    <b><br>Then</b> User can see ingredients which they need And they can see the
+                    map for nearby market AND they can chose whether use online
+                    pay or not<br>
                   </p>
                 </td>
               </tr>
