--- a/evf/EVF1-Like_and_comment.html
+++ b/evf/EVF1-Like_and_comment.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  <title>MVF1-Account management</title>
+  <title>EVF1-Like and comment</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -24,37 +24,22 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-        <h1>EVF1 - Like and comment</h1>
+        <h1>EVF1-Like and comment</h1>
       </header>
       <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
-        <h3>Activity Diagram</h3>
-        <b><img src="/images/mvf1activ.png" alt="Activity Diagram" />
-      </p>
-      <p>
-        <p>
-          <h3>Class Diagram</h3>
-          <b><img src="/images/mvf1class-account.bmp" width="960" height="600" alt="Class Diagram" />
+        <p><b>Activity diagram: <br></b>
+          <b><img src="/images/evf1diagram.png" width="960" height="600" alt="" />
         </p>
-        <p>
-          <h3>Design Diagram For Login</h3>
-          <p>User can easily like and comment on the main recipes</p>
-          <b><img src="/images/mvf1login.bmp" width="960" height="600" alt="Class Diagram" />
+        <p><b>Mock up diagram: <br></b>
+          <p>User can collection and facourite the recipe and check in their personal center </p>
+          <b><img src="/images/EVF1.png" width="960" height="300" alt="" />
         </p>
-        <p>
-          <h3>Design Diagram For Sign Up</h3>
-          <p>After creating an account, users can login, logout, manage the profile. Furthermore, they can post and edit
-            the recipes or comment other recipes.</p>
-          <b><img src="/images/mvf1createaccount.bmp" width="960" height="600" alt="Class Diagram" />
-        </p>
-        <p>
-          <h3>Design Diagram For Profile Page</h3>
-          <p>We provide a profile card and users can modify their personal information </p>
-          <b><img src="/images/mvf1profile.bmp" width="960" height="900" alt="Class Diagram" />
-        </p>
-        <p>
+
+   
+     
 
           <h2>2.Explanation</h2>
           <h3>2.1 Description</h3>
