--- a/evf/EVF2_Health_risk.html
+++ b/evf/EVF2_Health_risk.html
@@ -30,26 +30,27 @@
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
-
-        <p><b>Mock up (By invision): <br></b>
-          <p>User can select a slider picture and navigate to the recipe page directly</p>
-          <b><img src="/images/slider.gif" width="960" height="600" alt="" />
+        <p><b>Activity diagram: <br></b>
+          <b><img src="/images/evf2diagram.png" width="960" height="600" alt="" />
         </p>
-      </p>
+        <p><b>Mock up diagram: <br></b>
+          <p>User can collection and facourite the recipe and check in their personal center </p>
+          <b><img src="/images/EVF2.png" width="960" height="300" alt="" />
+        </p>
+
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
       <p style="color: black;">
-
-This is a fearture created to inform users about the quality of this recipe. With this extended feature, the user can know how the food made based on that recipe will affect the health.
-
-
+      This is a fearture created to inform users about the quality of this recipe. 
+      With this extended feature, the user can know how the food made based on that 
+      recipe will affect the health.
       </p>
       <h3>2.2 User story and criteria</h3>
 
       <ul>
 
         <li>
-          <b> Slider:</b> <br />
+          <b> Health risk:</b> <br />
 
           <table data-toggle="table">
             <thead>
@@ -72,7 +73,7 @@ This is a fearture created to inform users about the quality of this recipe. Wit
                     <b><br>When</b> I click on the “View +” button next to the text “Precaution” <br>
                     <b><br>Then</b> A chat bubble pop up AND user can read through the precaution<br>
 
-                    <br><br>Criterion 0: <br>
+                    <br><br>Criterion 1: <br>
                     <b>Given</b> I im in the main page and I choose a recipe, system switches to the recipe details<br>
                     <b><br>When</b> I click on the “Hide -” button next to the text “Precaution” <br>
                     <b><br>Then</b> The precaution disappeares<br>
