--- a/evf/EVF5-Shopping_Helper.html
+++ b/evf/EVF5-Shopping_Helper.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  <title>EVF4-Substitution</title>
+  <title>EVF5 - Shopping helper</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -24,30 +24,32 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-        <h1>EVF4 - Substitution</h1>
+        <h1>EVF5 - Shopping helper</h1>
       </header>
       <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
         <p><b>Activity diagram: <br></b>
-          <b><img src="/images/evf4diagram.png" width="960" height="600" alt="" />
+          <b><img src="/images/evf5diagram.png" width="960" height="600" alt="" />
         </p>
         <p><b>Mock up diagram: <br></b>
-          <p>User can substitution ingredients which they don't want to eat in recipe</p>
-          <b><img src="/images/EVF4.png" width="960" height="300" alt="" />
+          <p> This part of the function helps users to make up for the ingredients they lack while viewing the menu, and 
+            provides online order delivery service. If users don't need to spend freight, they can also find the nearest 
+            market to buy their ingredients through the map function, and the list of ingredients can also be saved to 
+            the collection album to facilitate the user's investigation.This feature is designed to provide a shopping
+            helper for users.</p>
+          <b><img src="/images/EVF5.png" width="960" height="300" alt="" />
         </p>
         <h2>2.Explanation</h2>
         <h3>2.1 Description</h3>
-        <p> The function of this part is to help users replace the ingredients in the recipe. 
-          Because some users may be allergic to certain ingredients or other special circumstances, they can't use certain ingredients. 
-          Therefore, this function can help them replace inedible ingredients. This function can screen out the replaced menu for users to use. </p>
+        <p>This part of the function helps users to make up for the ingredients they lack while viewing the menu, and provides online order delivery service. If users don't need to spend freight, they can also find the nearest market to buy their ingredients through the map function, and the list of ingredients can also be saved to the collection album to facilitate the user's investigation. This feature is designed to provide a shopping helper for users  </p>
         <h3>2.2 User story and criteria</h3>
 
         <ul>
 
           <li>
-            <b> Substitution:</b> <br />
+            <b>Shopping helper:</b> <br />
 
             <table data-toggle="table">
               <thead>
@@ -60,18 +62,20 @@
                 <tr>
                   <td>
                     <b>As a</b> user
-                    <p><b>I want</b> to substitution some ingredients in a recipe</p>
-                    <p><b>so that</b> I can avoid eating some ingredients</p>
+                  <p><b>I want</b> to use a shopping helper</p>
+                  <p><b>so that</b> I can buy ingredients easier</p>
                   </td>
                   <td>
                     <p>
                       <br><br>Criterion 0: <br>
-                      <b>Given</b>
+                      <b>Given</b> 
                       I am a customer
                       I search a recipe
                       I am on recipe detail page<br>
-                      <b><br>When</b> I click on the substitution button<br>
-                      <b><br>Then</b> User can substitution some ingredients And get new recipes<br>
+                      <b><br>When</b> I click on the shopping helper button<br>
+                      <b><br>Then</b> User can see ingredients which they need And they can see the
+                      map for nearby market AND they can chose whether use online
+                      pay or not<br>
                     </p>
                   </td>
                 </tr>
